# allgui

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  prepare.sh
samples/helloworld/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/api/: Director.cpp  Director.h  DirectorImpl.cpp  DirectorImpl.h  Errors.h  Events.h  Exception.cpp  Exception.h  Factory.cpp  Factory.h  FactoryImpl.h  Scene.cpp  Scene.h  SceneImpl.h  Window.cpp  Window.h  WindowImpl.h
src/backends/SDL2/: DirectorSDL2.cpp  DirectorSDL2.h  FactoryImplSDL2.cpp  FactoryImplSDL2.h  SceneSDL2.cpp  SceneSDL2.h  WindowSDL2.cpp  WindowSDL2.h  allgui_SDL2.h
